kubernetes/discount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discount-service
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discount-service
  template:
    metadata:
      labels:
        app: discount-service
        tier: backend
    spec:
      containers:
        - name: discount-service
          image: evgeniypnf/discount-service
          ports:
            - containerPort: 8080  # The port that the container is running on in the cluster
