kubernetes/tg-discount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tg-discount-service
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tg-discount-service
  template:
    metadata:
      labels:
        app: tg-discount-service
        tier: backend
    spec:
      containers:
        - name: tg-discount-service
          image: evgeniypnf/tg-discount-service
          ports:
            - containerPort: 8080  # The port that the container is running on in the cluster
