kubernetes/database.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgresql-db
  namespace: external
spec:
  type: ExternalName
  externalName: localhost:5432
